--- a/poc/emailvalidator/templates/email-qna-validator.html
+++ b/poc/emailvalidator/templates/email-qna-validator.html
@@ -152,7 +152,6 @@ endblock %} {% block body_block %}
         }
         let html1 = "";
         if (response.unanswered_qsn.length > 0) {
-          console.log(response.unanswered_qsn);
           $.each(response.unanswered_qsn, function (key1, item1) {
             html1 +=
               '<div class="col-lg-12 mt-4">' +
@@ -174,7 +173,26 @@ endblock %} {% block body_block %}
             html2 +=
               '<div class="col-lg-12 mt-4">' +
               '<div class="card p-4 rounded">' +
-              item2 +
+                '<div class="d-flex justify-content-between">' +
+                    '<div class="row">' +
+                        '<div class="col-12">' +
+                '<strong>' +
+                        item2.question +
+                        '</strong><br />' +
+                      '<small>Answer : '+
+                      item2?.output?.answer +
+                      '</small>' +
+                '</div>'+
+                    '</div>'+
+                '<div class="row">' +
+                        '<div class="col-12">' +
+                '<strong>' +
+                        {#'Accuracy :'+#}
+                        item2.output.score +
+                        '</strong><br />' +
+                '</div>'+
+                    '</div>'+
+                '</div>' +
               "</div>" +
               "</div>";
           });
